[project]
name = "langgraph-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-deepseek>=0.1.3",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "pip>=25.1.1",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
